SOFTWARE/OS VERSIONS Windows: macOS: Linux/KDE Plasma: (available in About System) KDE Plasma Version: KDE Frameworks Version: Qt Version: ADDITIONAL INFORMATION
Git commit cd77b22bd9a2879dfcddf223029fe6dd1db5f023 by Dag Andersen. Committed on 20/04/2020 at 08:39. Pushed by danders into branch 'master'. Chart: Fix Bug 420292 - Axis titles not rotated when plot area rotated Moves all axis rotation stuff to layout. Also fixes reading axis-postion from stylestack. FIXED-IN: 3.1.90 M +7 -6 plugins/chartshape/Axis.cpp M +51 -0 plugins/chartshape/ChartLayout.cpp M +4 -0 plugins/chartshape/ChartLayout.h M +0 -1 plugins/chartshape/ChartTool.cpp M +0 -3 plugins/chartshape/PlotArea.cpp M +0 -44 plugins/chartshape/commands/PlotAreaCommand.cpp https://commits.kde.org/calligra/cd77b22bd9a2879dfcddf223029fe6dd1db5f023