Chart: Fix Bug 420292 - Axis titles not rotated when plot area rotated

Moves all axis rotation stuff to layout.

Also fixes reading axis-postion from stylestack.

BUG: 420292
FIXED-IN: 3.1.90